--- a/iOS Tutorial/Base.lproj/Main.storyboard
+++ b/iOS Tutorial/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <segue destination="fY4-II-AQP" kind="show" id="pKk-QD-RiV"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YQt-Ju-JlG"/>
@@ -59,19 +62,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1998592" translatesAutoresizingMaskIntoConstraints="NO" id="0p5-aS-mAp">
-                                <rect key="frame" x="145" y="147" width="100" height="100"/>
+                                <rect key="frame" x="145" y="191" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="2wZ-bJ-uVS"/>
                                     <constraint firstAttribute="height" constant="100" id="RC8-e3-jDr"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qBn-Hr-p1X">
-                                <rect key="frame" x="24" y="347" width="342" height="34"/>
+                                <rect key="frame" x="24" y="391" width="342" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M0A-8W-oCX">
-                                <rect key="frame" x="24" y="405" width="342" height="34"/>
+                                <rect key="frame" x="24" y="449" width="342" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -94,6 +97,7 @@
                             <constraint firstItem="0p5-aS-mAp" firstAttribute="centerX" secondItem="3pu-Rs-SWm" secondAttribute="centerX" id="mkH-ot-UsI"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="vd1-gW-51W"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="APw-23-dXI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
